Refacter access link

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th = "https://www.thymeleaf.org/">
 
 <head th:replace = "fragments::header">
+    <script src="js/demo/chart-area-demo.js"></script>
 </head>
 <body id="page-top">
 <!-- Page Wrapper -->
