--- a/src/main/resources/templates/admin/admin-page.html
+++ b/src/main/resources/templates/admin/admin-page.html
@@ -103,14 +103,14 @@
                 <i class="ti-settings text-primary"></i>
                 Settings
               </a>
-              <a class="dropdown-item">
+              <a class="dropdown-item" th:href="@{/logout}">
                 <i class="ti-power-off text-primary"></i>
                 Logout
               </a>
             </div>
           </li>
           <li class="nav-item nav-settings d-none d-lg-flex">
-            <a class="nav-link" th:href="@{/logout}">
+            <a class="nav-link" >
               <i class="icon-ellipsis"></i>
             </a>
           </li>
