Register: with Role "user" after register status is "inactive" and need "ADMIN" approve for change to "active", and then can login.

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,16 +3,11 @@
 
 <head th:replace="fragments :: header">
 </head>
-
 <body class="bg-gradient-primary">
-
     <div class="container">
-
         <!-- Outer Row -->
         <div class="row justify-content-center">
-
             <div class="col-xl-10 col-lg-12 col-md-9">
-
                 <div class="card o-hidden border-0 shadow-lg my-5">
                     <div class="card-body p-0">
                         <!-- Nested Row within Card Body -->
@@ -23,14 +18,12 @@
                                     <div class="text-center">
                                         <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                                     </div>
-                                    <!-- "param.error" va "param.logout" dc define o AdminConfiguration.java-->
-                                    <div th:if="${param.error}" class="alert alert-danger text-center">
-                                        Invalid username or password
+                                    <div th:if="${session.errorMessage}" class="alert alert-danger">
+                                        <p th:text="${session.errorMessage}" ></p>
                                     </div>
                                     <div th:if="${param.logout}" class="alert alert-success text-center">
                                         You have been logged out!
                                     </div>
-
                                     <!-- "do-login" dc define o AdminConfiguration.java, sau khi login thanh cong se dc redirect den index.html-->
                                     <form th:action="@{/do-login}"  class="user"  method="post">
                                         <div class="form-group">
@@ -59,14 +52,9 @@
                         </div>
                     </div>
                 </div>
-
             </div>
-
         </div>
-
     </div>
-
 <div ></div>
 </body>
-
 </html>
