--- a/src/main/resources/templates/admin/pages/tables/userlist.html
+++ b/src/main/resources/templates/admin/pages/tables/userlist.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th = "https://www.thymeleaf.org/">
 
 <head>
   <!-- Required meta tags -->
@@ -7,15 +7,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Skydash Admin</title>
   <!-- plugins:css -->
-  <link rel="stylesheet" href="../../vendors/feather/feather.css">
-  <link rel="stylesheet" href="../../vendors/css/vendor.bundle.base.css">
+  <link rel="stylesheet" th:href="@{admin/user/1-admin-page/vendors/feather/feather.css}">
+  <link rel="stylesheet" th:href="@{admin/user/1-admin-page/vendors/ti-icons/css/themify-icons.css}">
+  <link rel="stylesheet" th:href="@{admin/user/1-admin-page/vendors/css/vendor.bundle.base.css}">
   <!-- endinject -->
   <!-- Plugin css for this page -->
+  <link rel="stylesheet" th:href="@{admin/user/1-admin-page/vendors/datatables.net-bs4/dataTables.bootstrap4.css}">
+  <link rel="stylesheet" th:href="@{admin/user/1-admin-page/vendors/ti-icons/css/themify-icons.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{admin/user/1-admin-page/js/select.dataTables.min.css}">
   <!-- End plugin css for this page -->
   <!-- inject:css -->
-  <link rel="stylesheet" href="../../css/vertical-layout-light/style.css">
+  <link rel="stylesheet" th:href="@{admin/user/1-admin-page/css/vertical-layout-light/style.css}" type="text/css">
   <!-- endinject -->
-  <link rel="shortcut icon" href="../../images/favicon.png" />
+  <link rel="shortcut icon" th:href="@{admin/user/1-admin-page/images/favicon.png}"/>
 </head>
 
 <body>
@@ -23,8 +27,8 @@
     <!-- partial:../../partials/_navbar.html -->
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
       <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-        <a class="navbar-brand brand-logo mr-5" href="../../index.html"><img src="../../images/logo.svg" class="mr-2" alt="logo"/></a>
-        <a class="navbar-brand brand-logo-mini" href="../../index.html"><img src="../../images/logo-mini.svg" alt="logo"/></a>
+        <a class="navbar-brand brand-logo mr-5" href="index.html"><img th:src="@{admin/user/1-admin-page/images/logo.svg}" class="mr-2" alt="logo"/></a>
+        <a class="navbar-brand brand-logo-mini" href="index.html"><img th:src="@{admin/user/1-admin-page/images/logo-mini.svg}" alt="logo"/></a>
       </div>
       <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
         <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
@@ -344,7 +348,7 @@
             </a>
             <div class="collapse" id="tables">
               <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="../../pages/tables/basic-table.html">Basic table</a></li>
+                <li class="nav-item"> <a class="nav-link" href="../../pages/tables/userlist.html">Basic table</a></li>
               </ul>
             </div>
           </li>
@@ -786,35 +790,44 @@
             </div>
           </div>
         </div>
-        <!-- content-wrapper ends -->
-        <!-- partial:../../partials/_footer.html -->
-        <footer class="footer">
-          <div class="d-sm-flex justify-content-center justify-content-sm-between">
-            <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © 2021.  Premium <a href="https://www.bootstrapdash.com/" target="_blank">Bootstrap admin template</a> from BootstrapDash. All rights reserved.</span>
-            <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Hand-crafted & made with <i class="ti-heart text-danger ml-1"></i></span>
-          </div>
-        </footer>
-        <!-- partial -->
+          <!-- content-wrapper ends -->
+          <!-- partial:../../partials/_footer.html -->
+          <footer class="footer">
+            <div class="d-sm-flex justify-content-center justify-content-sm-between">
+              <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © 2021.  Premium <a href="https://www.bootstrapdash.com/" target="_blank">Bootstrap admin template</a> from BootstrapDash. All rights reserved.</span>
+              <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Hand-crafted & made with <i class="ti-heart text-danger ml-1"></i></span>
+            </div>
+          </footer>
+          <!-- partial -->
+        </div>
+        <!-- main-panel ends -->
       </div>
-      <!-- main-panel ends -->
+      <!-- page-body-wrapper ends -->
     </div>
-    <!-- page-body-wrapper ends -->
-  </div>
-  <!-- container-scroller -->
+    <!-- container-scroller -->
+
   <!-- plugins:js -->
-  <script src="../../vendors/js/vendor.bundle.base.js"></script>
+  <script th:src="@{admin/user/1-admin-page/vendors/js/vendor.bundle.base.js}"></script>
   <!-- endinject -->
   <!-- Plugin js for this page -->
+  <script th:src="@{admin/user/1-admin-page/vendors/chart.js/Chart.min.js}"></script>
+  <script th:src="@{admin/user/1-admin-page/vendors/datatables.net/jquery.dataTables.js}"></script>
+  <script th:src="@{admin/user/1-admin-page/vendors/datatables.net-bs4/dataTables.bootstrap4.js}"></script>
+  <script th:src="@{admin/user/1-admin-page/js/dataTables.select.min.js}"></script>
+
   <!-- End plugin js for this page -->
   <!-- inject:js -->
-  <script src="../../js/off-canvas.js"></script>
-  <script src="../../js/hoverable-collapse.js"></script>
-  <script src="../../js/template.js"></script>
-  <script src="../../js/settings.js"></script>
-  <script src="../../js/todolist.js"></script>
+  <script th:src="@{admin/user/1-admin-page/js/off-canvas.js}"></script>
+  <script th:src="@{admin/user/1-admin-page/js/hoverable-collapse.js}"></script>
+  <script th:src="@{admin/user/1-admin-page/js/template.js}"></script>
+  <script th:src="@{admin/user/1-admin-page/js/settings.js}"></script>
+  <script th:src="@{admin/user/1-admin-page/js/todolist.js}"></script>
   <!-- endinject -->
   <!-- Custom js for this page-->
+  <script th:src="@{admin/user/1-admin-page/js/dashboard.js}"></script>
+  <script th:src="@{admin/user/1-admin-page/js/Chart.roundedBarCharts.js}"></script>
   <!-- End custom js for this page-->
 </body>
+
 
 </html>
