Admin/User-list: add html,js for button 'active' 'inactive' in user list, when click to buttton, modal display and handle change status

--- a/src/main/resources/static/1-admin-page/css/vertical-layout-light/style.css
+++ b/src/main/resources/static/1-admin-page/css/vertical-layout-light/style.css
@@ -30593,3 +30593,33 @@ div.tagsinput span.tag a {
 }
 
 /*# sourceMappingURL=../maps/vertical-layout-light/style.css.map */
+
+
+/*body {*/
+/*    font-family: Arial, sans-serif;*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    height: 100vh;*/
+/*}*/
+
+.custom-button {
+    font-size: 14px;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.active {
+    background-color: #3c8dbc;
+    color: white;
+}
+
+.inactive {
+    background-color: #d5311b;
+    color: white;
+}
