--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -26,8 +26,8 @@
   <!-- partial:partials/_navbar.html -->
   <nav th:fragment="topNavBar" class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
     <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-      <a class="navbar-brand brand-logo mr-5" href="index.html"><img th:src="@{/1-admin-page/images/logo.svg}" class="mr-2" alt="logo"/></a>
-      <a class="navbar-brand brand-logo-mini" href="index.html"><img th:src="@{/1-admin-page/images/logo-mini.svg}" alt="logo"/></a>
+      <a class="navbar-brand brand-logo mr-5" href="/admin-page"><img th:src="@{/1-admin-page/images/logo.svg}" class="mr-2" alt="logo"/></a>
+      <a class="navbar-brand brand-logo-mini" href="/admin-page"><img th:src="@{/1-admin-page/images/logo-mini.svg}" alt="logo"/></a>
     </div>
     <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
       <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
@@ -347,7 +347,7 @@
           </a>
           <div class="collapse" id="tables">
             <ul class="nav flex-column sub-menu">
-              <li class="nav-item"> <a class="nav-link" th:href="@{admin/user/list}">User list</a></li>
+              <li class="nav-item"> <a class="nav-link" th:href="@{/admin/user/list}">User list</a></li>
             </ul>
           </div>
         </li>
@@ -1073,7 +1073,7 @@
   <!-- endinject -->
   <!-- Plugin js for this page -->
   <script th:src="@{/1-admin-page/vendors/chart.js/Chart.min.js}"></script>
-  <script th:src="@{/1-admin-page/vendors/datatables.net/jquery.dataTables.js}"></script>
+<!--  <script th:src="@{/1-admin-page/vendors/datatables.net/jquery.dataTables.js}"></script>-->
   <script th:src="@{/1-admin-page/vendors/datatables.net-bs4/dataTables.bootstrap4.js}"></script>
   <script th:src="@{/1-admin-page/js/dataTables.select.min.js}"></script>
 
