refactor source code

--- a/src/main/resources/templates/admin/pages/samples/error-404.html
+++ b/src/main/resources/templates/admin/pages/samples/error-404.html
@@ -1,22 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th = "https://www.thymeleaf.org/">
 
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Skydash Admin</title>
-  <!-- plugins:css -->
-  <link rel="stylesheet" href="../../vendors/feather/feather.css">
-  <link rel="stylesheet" href="../../vendors/ti-icons/css/themify-icons.css">
-  <link rel="stylesheet" href="../../vendors/css/vendor.bundle.base.css">
-  <!-- endinject -->
-  <!-- Plugin css for this page -->
-  <!-- End plugin css for this page -->
-  <!-- inject:css -->
-  <link rel="stylesheet" href="../../css/vertical-layout-light/style.css">
-  <!-- endinject -->
-  <link rel="shortcut icon" href="../../images/favicon.png" />
+<head th:replace="fragments::header">
 </head>
 
 <body>
@@ -36,7 +21,7 @@
             </div>
             <div class="row mt-5">
               <div class="col-12 text-center mt-xl-2">
-                <a class="text-white font-weight-medium" href="../../index.html">Back to home</a>
+                <a class="text-white font-weight-medium" href="/admin-page">Back to home</a>
               </div>
             </div>
             <div class="row mt-5">
@@ -53,16 +38,16 @@
   </div>
   <!-- container-scroller -->
   <!-- plugins:js -->
-  <script src="../../vendors/js/vendor.bundle.base.js"></script>
+  <script th:src="@{/1-admin-page/vendors/js/vendor.bundle.base.js}"></script>
   <!-- endinject -->
   <!-- Plugin js for this page -->
   <!-- End plugin js for this page -->
   <!-- inject:js -->
-  <script src="../../js/off-canvas.js"></script>
-  <script src="../../js/hoverable-collapse.js"></script>
-  <script src="../../js/template.js"></script>
-  <script src="../../js/settings.js"></script>
-  <script src="../../js/todolist.js"></script>
+  <script th:src="@{/1-admin-page/js/off-canvas.js}"></script>
+  <script th:src="@{/1-admin-page/js/hoverable-collapse.js}"></script>
+  <script th:src="@{/1-admin-page/js/template.js}"></script>
+  <script th:src="@{/1-admin-page/js/settings.js}"></script>
+  <script th:src="@{/1-admin-page/js/todolist.js}"></script>
   <!-- endinject -->
 </body>
 
