--- a/src/main/resources/templates/admin/pages/documentation/documentation.html
+++ b/src/main/resources/templates/admin/pages/documentation/documentation.html
@@ -1,26 +1,30 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th = "https://www.thymeleaf.org/">
 
-<head>
+<head th:replace="fragments::header">
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Skydash Admin Dashboard</title>
+  <title>Skydash Admin</title>
   <!-- plugins:css -->
-  <link rel="stylesheet" href="../../vendors/feather/feather.css">
-  <link rel="stylesheet" href="../../vendors/ti-icons/css/themify-icons.css">
-  <link rel="stylesheet" href="../../vendors/css/vendor.bundle.base.css">
+  <link rel="stylesheet" th:href="@{1-admin-page/vendors/feather/feather.css}">
+  <link rel="stylesheet" th:href="@{1-admin-page/vendors/ti-icons/css/themify-icons.css}">
+  <link rel="stylesheet" th:href="@{1-admin-page/vendors/css/vendor.bundle.base.css}">
   <!-- endinject -->
-  <!-- plugin css for this page -->
-  <link rel="stylesheet" href="../template/vendors/codemirror/codemirror.css">
-  <link rel="stylesheet" href="../template/vendors/codemirror/ambiance.css">
-  <link rel="stylesheet" href="../template/vendors/pwstabs/jquery.pwstabs.min.css">
+  <!-- Plugin css for this page -->
+  <link rel="stylesheet" th:href="@{1-admin-page/vendors/datatables.net-bs4/dataTables.bootstrap4.css}">
+  <link rel="stylesheet" th:href="@{1-admin-page/vendors/ti-icons/css/themify-icons.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{1-admin-page/js/select.dataTables.min.css}">
   <!-- End plugin css for this page -->
   <!-- inject:css -->
-  <link rel="stylesheet" href="../../css/vertical-layout-light/style.css">
+  <link rel="stylesheet" th:href="@{1-admin-page/css/vertical-layout-light/style.css}" type="text/css">
   <!-- endinject -->
-  <link rel="shortcut icon" href="../../images/favicon.png" />
+  <link rel="shortcut icon" th:href="@{1-admin-page/images/favicon.png}"/>
+</head>
+<link rel="stylesheet" th:href="@{/1-admin-page/template/vendors/codemirror/codemirror.css}">
+<link rel="stylesheet" th:href="@{/1-admin-page/template/vendors/codemirror/ambiance.css}">
+<link rel="stylesheet"th:href="@{/1-admin-page/template/vendors/pwstabs/jquery.pwstabs.min.css}">
 </head>
 
 <body>
@@ -31,22 +35,21 @@
               <div class="container-fluid">
                 <div class="row">
                   <div class="col-12 pt-5">
-                    <a class="btn btn-primary" href="../../index.html"><i class="ti-home mr-2"></i>Back to home</a>
+                    <a class="btn btn-primary" href="/admin-page"><i class="ti-home mr-2"></i>Back to home</a>
                   </div>
                 </div>
                 <div class="row pt-5 mt-5">
                   <div class="col-12 pt-5 text-center">
                     <i class="text-primary mdi mdi-file-document-box-multiple-outline display-1"></i>
                     <h3 class="text-primary font-weight-light mt-5">
-                      The detailed documentation of Skydash Admin Template is provided at 
-                      <a href="http://bootstrapdash.com/demo/skydash/docs/documentation.html" target="_blank" class="text-danger d-block text-truncate">
-                        http://bootstrapdash.com/demo/skydash/docs/documentation.html
+                      This is project document
+                      <a href="https://getbootstrap.com/" target="_blank" class="text-danger d-block text-truncate">
                       </a>
                     </h3>
                     <h4 class="mt-4 font-weight-light text-primary">
-                      In case you want to refer the documentation file, it is available at 
-                      <span class="text-danger">/docs/documentation.html</span> 
-                      in the downloaded folder
+                      If you want to know more details in bootstrap click here
+                      <span class="text-danger">https://getbootstrap.com/</span>
+                      to see more
                     </h4>
                   </div>
                 </div>
@@ -55,7 +58,7 @@
             <!-- partial:../../partials/_footer.html -->
             <footer class="footer">
           <div class="d-sm-flex justify-content-center justify-content-sm-between">
-            <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © 2021.  Premium <a href="https://www.bootstrapdash.com/" target="_blank">Bootstrap admin template</a> from BootstrapDash. All rights reserved.</span>
+            <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © 2023.  Premium <a href="https://getbootstrap.com/" target="_blank">Bootstrap admin template</a> from BootstrapDash. All rights reserved.</span>
             <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Hand-crafted & made with <i class="ti-heart text-danger ml-1"></i></span>
           </div>
         </footer>
