Deactive/Active user: Add csrfToken for avoid forbidden by springsecurity

--- a/src/main/resources/templates/admin/userlist.html
+++ b/src/main/resources/templates/admin/userlist.html
@@ -2,24 +2,6 @@
 <html lang="en" xmlns:th = "https://www.thymeleaf.org/">
 
 <head th:replace="fragments::header">
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Skydash Admin</title>
-  <!-- plugins:css -->
-  <link rel="stylesheet" th:href="@{/1-admin-page/vendors/feather/feather.css}">
-  <link rel="stylesheet" th:href="@{/1-admin-page/vendors/ti-icons/css/themify-icons.css}">
-  <link rel="stylesheet" th:href="@{/1-admin-page/vendors/css/vendor.bundle.base.css}">
-  <!-- endinject -->
-  <!-- Plugin css for this page -->
-  <link rel="stylesheet" th:href="@{/1-admin-page/vendors/datatables.net-bs4/dataTables.bootstrap4.css}">
-  <link rel="stylesheet" th:href="@{/1-admin-page/vendors/ti-icons/css/themify-icons.css}">
-  <link rel="stylesheet" type="text/css" th:href="@{/1-admin-page/js/select.dataTables.min.css}">
-  <!-- End plugin css for this page -->
-  <!-- inject:css -->
-  <link rel="stylesheet" th:href="@{/1-admin-page/css/vertical-layout-light/style.css}" type="text/css">
-  <!-- endinject -->
-  <link rel="shortcut icon" th:href="@{/1-admin-page/images/favicon.png}"/>
 </head>
 
 <body>
@@ -51,7 +33,6 @@
                   <div th:if="${successMessage}" class="alert alert-success" role="alert">
                     <span th:text="${successMessage}"></span>
                   </div>
-
                   <div th:if="${errorMessage}" class="alert alert-danger" role="alert">
                     <span th:text="${errorMessage}"></span>
                   </div>
@@ -76,11 +57,13 @@
                           <td th:text="${user.usertype}"></td>
                           <td>
                             <div class="button-container">
-                              <button th:id="'toggle-button' + ${user.id}" th:class="'custom-button ' + (${user.active} ? 'active' : 'inactive')" th:onclick="'toggleActiveStatus(' + ${user.id} + ', ' + ${user.active} + ')'" data-toggle="modal" data-target="#activeuser">
+                              <button th:id="'toggle-button' + ${user.id}" th:class="'custom-button ' + (${user.active} ? 'active' : 'inactive')" th:onclick="'toggleActiveStatus(' + ${user.id} + ', ' + ${user.active} + ')'" th:data-userid="${user.id}" data-toggle="modal" data-target="#activeuser">
                                 <span th:text="${user.active} ? 'Active' : 'Inactive'"></span>
                               </button>
                             </div>
                           </td>
+                        </tr>
+
                         <tr th:if="${#lists.isEmpty(#lists)}">
                           <td  colspan="6" class="text-center">Account is not found</td>
                         </tr>
@@ -91,8 +74,9 @@
                     <div class="modal fade" id="activeuser" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                       <div class="modal-dialog" role="document">
                         <div class="modal-content">
-                          <form id="activeuser-form" method="post" th:action="@{/activateUser/__USER_ID__}" >
-                            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"  th:object="${user}" />
+                          <form id="activeuser-form" method="post">
+                            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+
                             <div class="modal-header">
                               <h5 class="modal-title" id="activeuser-title"></h5>
                               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
